traces/bug_670.txt
src/Eigen/eigenvalue.cpp:924: error: DEAD_STORE
  The value written to &tol (type double) is never used.
Showing all 1 steps of the trace


src/Eigen/eigenvalue.cpp:924:5: Write of unused value
922.   {
923.       dddd = (verbosity>=200);
924.       double tol=1e-6;
           ^
925.       long nconv=0;
926.       long nbev=1;
